[package]
name = "bch-api-rust"
version = "0.1.0"
edition = "2021"
description = "REST API gateway for Bitcoin Cash (BCH Full Node, Fulcrum, SLP Indexer)"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "normalize-path"] }
tower = { version = "0.5", features = ["util", "timeout"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bitcoincash-addr = "0.5"
dotenvy = "0.15"

[dev-dependencies]
wiremock = "0.6"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
